--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin: 20px;
 }
 
 .board {
     display: grid;
     grid-template-columns: 200px 200px 200px;
     grid-template-rows: 200px 200px 200px;
+    gap: 3px;
+    justify-content: center;
 }
 
 #One, #Two, #Three, #Four, #Five, #Six, #Seven, #Eight, #Nine {
